tests/error/comptime_arg_errors/unknown_arith.err
Error: Not known at compile-time (at $FILE:11:8)
   | 
 9 | @guppy
10 | def main() -> None:
11 |     foo(nat(1 + 2))
   |         ^^^^^^^^^^ Value of this argument must be known at compile-time
   | 
11 |     foo(nat(1 + 2))
   |         ---------- This expression involves a dynamic computation, so its value
   |                    is not statically known

Note: We are currently investigating ways to make Guppy's compile-time reasoning
smarter. Please leave your feedback at
https://github.com/quantinuum/guppylang/discussions/987

Guppy compilation failed due to 1 previous error
